# delta-engineer-lmu

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  TODO.md  env.example  pyproject.toml
.github/: PROJECTS.md
client/: README.md  electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
client/src/main/: capture.ts  index.ts
client/src/preload/: index.ts
client/src/renderer/: index.html
client/src/renderer/src/: App.tsx  env.d.ts  main.tsx
client/src/renderer/src/assets/: main.css
client/src/renderer/src/components/: ApiSettingsModal.tsx  AppShell.tsx
client/src/shared/: app-settings.ts  capture-types.ts
docs/: telemetry-format.md  ui-architecture.md
scripts/: lmu_capture_bridge.py
src/: config.py  main.py
src/api/: health.py  laps.py  sessions.py  setups.py  telemetry.py
src/capture/: __init__.py  lmu_shared_memory.py  rf2_scoring_ctypes.py  scoring_parser.py
src/core/: lap_analyzer.py  parser.py  session_manager.py
src/db/: engine.py  init_db.py
src/models/: __init__.py  lap.py  schemas.py  session.py  setup.py  telemetry.py
tests/: conftest.py
tests/fixtures/: sample_telemetry_frame.json  sample_telemetry_payload.json
tests/integration/: test_laps_api.py  test_sessions_api.py  test_setups_api.py  test_telemetry_api.py
tests/unit/: test_capture_shared_memory.py  test_config.py  test_health.py  test_lap_analyzer.py  test_models.py  test_parser.py  test_scoring_parser.py  test_session_manager.py  test_setup_parameters.py
(+17 files in other folders)
